fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "Uprawnienia",
   "Collection permissions": "Uprawnienia kolekcji",
   "Share this collection": "Udostępnij tę kolekcję",
+  "Import document": "Importuj dokument",
+  "Sort in sidebar": "Sortuj w pasku bocznym",
+  "A-Z sort": "Sortuj A-Z",
+  "Z-A sort": "Sortuj Z-A",
+  "Manual sort": "Sortowanie ręczne",
   "Search in collection": "Wyszukaj w kolekcji",
   "Star": "Oznacz gwiazdką",
   "Unstar": "Usuń gwiazdkę",
@@ -83,7 +88,6 @@
   "Search in document": "Szukaj w dokumencie",
   "Print": "Drukuj",
   "Print document": "Drukuj dokument",
-  "Import document": "Importuj dokument",
   "Templatize": "Konwertuj na szablon",
   "Create template": "Utwórz szablon",
   "Open random document": "Otwórz losowy dokument",
@@ -206,6 +210,8 @@
   "Move document": "Przenieś dokument",
   "Moving": "Przenoszenie",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Przenoszenie dokumentu <em>{{ title }}</em> do kolekcji {{ newCollectionName }} zmieni uprawnienia dla wszystkich członków obszaru roboczego z <em>{{ prevPermission }}</em> na <em>{{ newPermission }}</em>.",
+  "More options": "More options",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Nie można załadować kolekcji, proszę odświeżyć aplikację",
   "Start view": "Widok startowy",
   "Install now": "Zainstaluj teraz",
@@ -216,7 +222,6 @@
   "Deleted Collection": "Usunięta kolekcja",
   "Untitled": "Bez tytułu",
   "Unpin": "Odepnij",
-  "{{ minutes }}m read": "{{ minutes }} minut czytania",
   "Select a location to copy": "Wybierz lokalizację do przeniesienia",
   "Document copied": "Dokument skopiowany",
   "Couldn’t copy the document, try again?": "Nie udało się przenieść dokumentu, spróbować ponownie?",
@@ -345,6 +350,7 @@
   "Reaction picker": "Selektor reakcji",
   "Could not load reactions": "Nie można załadować reakcji",
   "Reaction": "Reakcja",
+  "{{ minutes }}m read": "{{ minutes }} minut czytania",
   "Revision deleted": "Usunięto poprawkę",
   "Current version": "Aktualna wersja",
   "{{userName}} edited": "Użytkownik {{userName}} edytował",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Wyłącz to ustawienie, aby zniechęcać wyszukiwarki do indeksowania strony",
   "Show last modified": "Pokaż ostatnio zmodyfikowane",
   "Display the last modified timestamp on the shared page": "Wyświetl ostatnio zmodyfikowany znacznik czasu na wspólnej stronie",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "Wszystkie dokumenty w tej kolekcji będą udostępniane w sieci, w tym wszelkie nowe dokumenty dodane później",
   "Invite": "Zaproś",
   "{{ userName }} was added to the collection": "{{ userName }} został dodany do kolekcji",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Nie można załadować udostępnionych dokumentów",
   "Shared with me": "Udostępnione mi",
   "Show more": "Pokaż więcej",
+  "Link options": "Link options",
   "Could not load starred documents": "Nie udało się załadować dokumentów oznaczonych gwiazdką",
   "Starred": "Oznaczone gwiazdką",
   "Up to date": "Aktualne",
@@ -475,7 +484,7 @@
   "Keep as link": "Zachowaj jako link",
   "Mention": "Wzmianka",
   "Embed": "Osadzenie",
-  "More options": "More options",
+  "Rename": "Zmień nazwę",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -559,7 +568,6 @@
   "Video": "Wideo",
   "None": "Brak",
   "Delete embed": "Usuń osadzenie",
-  "Rename": "Zmień nazwę",
   "Could not import file": "Nie można zaimportować pliku",
   "Unsubscribed from document": "Wypisano z dokumentu",
   "Unsubscribed from collection": "Zrezygnowano z subskrypcji kolekcji",
@@ -577,10 +585,6 @@
   "Integrations": "Integracje",
   "API key": "Klucz API",
   "Show path to document": "Pokaż ścieżkę do dokumentu",
-  "Sort in sidebar": "Sortuj w pasku bocznym",
-  "A-Z sort": "Sortuj A-Z",
-  "Z-A sort": "Sortuj Z-A",
-  "Manual sort": "Sortowanie ręczne",
   "Collection menu": "Menu kolekcji",
   "Comment options": "Opcje komentarza",
   "Enable viewer insights": "Włącz informacje o oglądających",
