--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "Oprávnění",
   "Collection permissions": "Oprávnění u sbírky",
   "Share this collection": "Sdílet tuto kolekci",
+  "Import document": "Importovat dokument",
+  "Sort in sidebar": "Seřadit v postranním panelu",
+  "A-Z sort": "A-Z sort",
+  "Z-A sort": "Z-A sort",
+  "Manual sort": "Manuální řazení",
   "Search in collection": "Hledat ve sbírce",
   "Star": "Přidat mezi oblíbené",
   "Unstar": "Odstranit z oblíbených",
@@ -83,7 +88,6 @@
   "Search in document": "Hledat v dokumentu",
   "Print": "Tisk",
   "Print document": "Vytisknout dokument",
-  "Import document": "Importovat dokument",
   "Templatize": "Vytvořit šablonu",
   "Create template": "Vytvořit šablonu",
   "Open random document": "Otevřít náhodný dokument",
@@ -206,6 +210,8 @@
   "Move document": "Přesunout dokument",
   "Moving": "Přesouvání",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Přesunutím dokumentu <em>{{ title }}</em> do sbírky {{ newCollectionName }} se změní oprávnění pro všechny členy pracovního prostoru z <em>{{ prevPermission }}</em> na <em>{{ newPermission }}</em>.",
+  "More options": "More options",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Sbírky se nepodařilo načíst, prosím načtěte aplikaci znovu",
   "Start view": "Domovská obrazovka",
   "Install now": "Nainstalovat",
@@ -216,7 +222,6 @@
   "Deleted Collection": "Odstraněná sbírka",
   "Untitled": "Bez názvu",
   "Unpin": "Zrušit připnutí",
-  "{{ minutes }}m read": "{{ minutes }}m read",
   "Select a location to copy": "Vyberte místo, kam chcete zkopírovat",
   "Document copied": "Dokument byl zkopírován",
   "Couldn’t copy the document, try again?": "Dokument nelze zkopírovat, chcete to zkusit znovu?",
@@ -345,6 +350,7 @@
   "Reaction picker": "Výběr reakce",
   "Could not load reactions": "Nepodařilo se načíst reakce",
   "Reaction": "Reakce",
+  "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Revision deleted",
   "Current version": "Aktuální verze",
   "{{userName}} edited": "{{userName}} akutalizoval",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Zakažte toto nastavení, abyste odradili vyhledávače od indexování stránky",
   "Show last modified": "Show last modified",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Pozvat",
   "{{ userName }} was added to the collection": "{{ userName }} byl přidán do sbírky",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Sdílené dokumenty nelze načíst",
   "Shared with me": "Sdíleno se mnou",
   "Show more": "Zobrazit více",
+  "Link options": "Link options",
   "Could not load starred documents": "Nelze načíst dokumenty s hvězdičkou",
   "Starred": "Oblíbené",
   "Up to date": "Aktuální",
@@ -475,7 +484,7 @@
   "Keep as link": "Zachovat jako odkaz",
   "Mention": "Mention",
   "Embed": "Embed",
-  "More options": "More options",
+  "Rename": "Přejmenovat",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -559,7 +568,6 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
-  "Rename": "Přejmenovat",
   "Could not import file": "Soubor nelze importovat",
   "Unsubscribed from document": "Upozornění vypnuta",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -577,10 +585,6 @@
   "Integrations": "Integrace",
   "API key": "API key",
   "Show path to document": "Zobrazit cestu k dokumentu",
-  "Sort in sidebar": "Seřadit v postranním panelu",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
-  "Manual sort": "Manuální řazení",
   "Collection menu": "Nabídka sbírek",
   "Comment options": "Nastavení komentářů",
   "Enable viewer insights": "Zapnout analytika nahlížení",
