--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "権限",
   "Collection permissions": "コレクションの権限",
   "Share this collection": "このコレクションを共有する",
+  "Import document": "ドキュメントをインポート",
+  "Sort in sidebar": "サイドバーの並べ替え",
+  "A-Z sort": "A-Z ソート",
+  "Z-A sort": "Z-A ソート",
+  "Manual sort": "手動で並べ替え",
   "Search in collection": "コレクション内を検索",
   "Star": "お気に入りに追加",
   "Unstar": "お気に入りから削除",
@@ -83,7 +88,6 @@
   "Search in document": "ドキュメント内を検索",
   "Print": "プリント",
   "Print document": "ドキュメントを印刷する",
-  "Import document": "ドキュメントをインポート",
   "Templatize": "テンプレート化",
   "Create template": "テンプレートを作成",
   "Open random document": "ランダムなドキュメントを開く",
@@ -206,6 +210,8 @@
   "Move document": "ドキュメントを移動",
   "Moving": "移動中",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "ドキュメント <em>{{ title }}</em> を {{ newCollectionName }} コレクションに移動すると、 <em>{{ prevPermission }}</em> から <em>{{ newPermission }}</em> へのすべてのワークスペースメンバーの権限が変更されます。",
+  "More options": "More options",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "コレクションを読み込めませんでした。アプリを再読み込みしてください。",
   "Start view": "起動時の画面",
   "Install now": "インストールしています",
@@ -216,7 +222,6 @@
   "Deleted Collection": "削除したコレクション",
   "Untitled": "無題のドキュメント",
   "Unpin": "ピン留めを外す",
-  "{{ minutes }}m read": "{{ minutes }} ",
   "Select a location to copy": "コピー先を選択してください",
   "Document copied": "ドキュメントがコピーされました",
   "Couldn’t copy the document, try again?": "ドキュメントをコピーできませんでした。もう一度お試しください。",
@@ -345,6 +350,7 @@
   "Reaction picker": "リアクションピッカー",
   "Could not load reactions": "リアクションを読み込めません",
   "Reaction": "リアクション",
+  "{{ minutes }}m read": "{{ minutes }} ",
   "Revision deleted": "Revision deleted",
   "Current version": "現在のバージョン",
   "{{userName}} edited": "{{userName}} が編集しました",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "この設定を無効にすると、検索エンジンのインデックス化を防ぐことができます",
   "Show last modified": "Show last modified",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "招待",
   "{{ userName }} was added to the collection": "{{ userName }} をコレクションに追加しました",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "共有済みのドキュメントを読み込めませんでした",
   "Shared with me": "共有アイテム",
   "Show more": "さらに表示",
+  "Link options": "Link options",
   "Could not load starred documents": "お気に入りのドキュメントを読み込めませんでした",
   "Starred": "お気に入り",
   "Up to date": "最新の状態",
@@ -475,7 +484,7 @@
   "Keep as link": "リンクとして保持",
   "Mention": "メンション",
   "Embed": "埋め込み",
-  "More options": "More options",
+  "Rename": "名前を変更",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -559,7 +568,6 @@
   "Video": "動画",
   "None": "なし",
   "Delete embed": "Delete embed",
-  "Rename": "名前を変更",
   "Could not import file": "ファイルをインポートできませんでした",
   "Unsubscribed from document": "ドキュメントの通知を解除しました",
   "Unsubscribed from collection": "コレクションの登録を解除しました",
@@ -577,10 +585,6 @@
   "Integrations": "連携",
   "API key": "API key",
   "Show path to document": "ドキュメントのパスを表示",
-  "Sort in sidebar": "サイドバーの並べ替え",
-  "A-Z sort": "A-Z ソート",
-  "Z-A sort": "Z-A ソート",
-  "Manual sort": "手動で並べ替え",
   "Collection menu": "コレクションメニュー",
   "Comment options": "コメントオプション",
   "Enable viewer insights": "ビューアインサイトを有効にする",
