--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "Rechten",
   "Collection permissions": "Verzamelingsrechten",
   "Share this collection": "Deel deze collectie",
+  "Import document": "Importeer document",
+  "Sort in sidebar": "Sorteer in zijbalk",
+  "A-Z sort": "A-Z sorteren",
+  "Z-A sort": "Z-A sorteren",
+  "Manual sort": "Sorteer handmatig",
   "Search in collection": "Zoek in collecties",
   "Star": "Maak favoriet",
   "Unstar": "Verwijder favoriet",
@@ -83,7 +88,6 @@
   "Search in document": "Zoek in document",
   "Print": "Afdrukken",
   "Print document": "Document afdrukken",
-  "Import document": "Importeer document",
   "Templatize": "Sjabloon maken",
   "Create template": "Maak sjabloon",
   "Open random document": "Open willekeurig document",
@@ -206,6 +210,8 @@
   "Move document": "Document verplaatsen",
   "Moving": "Verplaatsen",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Het document <em>{{ title }}</em> verplaatsen naar de {{ newCollectionName }} collectie zal de rechten voor alle werkruimte van <em>{{ prevPermission }}</em> wijzigen naar <em>{{ newPermission }}</em>.",
+  "More options": "Meer opties",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Collecties konden niet worden geladen, start de app alsjeblieft opnieuw op",
   "Start view": "Start weergave",
   "Install now": "Nu installeren",
@@ -216,7 +222,6 @@
   "Deleted Collection": "Verwijderde Collectie",
   "Untitled": "Naamloos",
   "Unpin": "Losmaken",
-  "{{ minutes }}m read": "{{ minutes }}m gelezen",
   "Select a location to copy": "Selecteer een locatie om te publiceren",
   "Document copied": "Bestand is gekopieerd",
   "Couldn’t copy the document, try again?": "Kon het document niet verplaatsen. Probeer het nog een keer?",
@@ -345,6 +350,7 @@
   "Reaction picker": "Reactie kiezer",
   "Could not load reactions": "Kon reacties niet laden",
   "Reaction": "Reactie",
+  "{{ minutes }}m read": "{{ minutes }}m gelezen",
   "Revision deleted": "Revisie verwijderd",
   "Current version": "Huidige versie",
   "{{userName}} edited": "{{userName}} bewerkte",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Schakel deze instelling uit om zoekmachines te ontmoedigen bij het indexeren van de pagina",
   "Show last modified": "Toon laatst gewijzigd",
   "Display the last modified timestamp on the shared page": "De laatst gewijzigde tijdstempel op de gedeelde pagina weergeven",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "Alle documenten in deze collectie worden op het web gedeeld, inclusief nieuwe documenten die later worden toegevoegd",
   "Invite": "Uitnodigen",
   "{{ userName }} was added to the collection": "{{ userName }} is aan de verzameling toegevoegd",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Kan gedeelde documenten niet laden",
   "Shared with me": "Gedeeld met mij",
   "Show more": "Meer weergeven",
+  "Link options": "Link options",
   "Could not load starred documents": "Kan favoriete documenten niet laden",
   "Starred": "Favorieten",
   "Up to date": "Bijgewerkt",
@@ -475,7 +484,7 @@
   "Keep as link": "Behoud als link",
   "Mention": "Vermelding",
   "Embed": "Insluiten",
-  "More options": "Meer opties",
+  "Rename": "Hernoem",
   "Insert after": "Invoegen achter",
   "Insert before": "Invoegen voor",
   "Move up": "Omhoog verplaatsen",
@@ -559,7 +568,6 @@
   "Video": "Video",
   "None": "Geen",
   "Delete embed": "Insluiting verwijderen",
-  "Rename": "Hernoem",
   "Could not import file": "Kon bestand niet importeren",
   "Unsubscribed from document": "Afgemeld voor document",
   "Unsubscribed from collection": "Afgemeld voor collectie",
@@ -577,10 +585,6 @@
   "Integrations": "Intergraties",
   "API key": "API-sleutel",
   "Show path to document": "Toon pad naar document",
-  "Sort in sidebar": "Sorteer in zijbalk",
-  "A-Z sort": "A-Z sorteren",
-  "Z-A sort": "Z-A sorteren",
-  "Manual sort": "Sorteer handmatig",
   "Collection menu": "Collectie menu",
   "Comment options": "Opties voor reageren",
   "Enable viewer insights": "Schakel viewer inzichten uit",
