--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "Permissões",
   "Collection permissions": "Permissões da coleção",
   "Share this collection": "Partilhe esta coleção",
+  "Import document": "Importar documento",
+  "Sort in sidebar": "Ordenar na barra lateral",
+  "A-Z sort": "A-Z sort",
+  "Z-A sort": "Z-A sort",
+  "Manual sort": "Ordenação manual",
   "Search in collection": "Procurar na coleção",
   "Star": "Estrela",
   "Unstar": "Tirar estrela",
@@ -83,7 +88,6 @@
   "Search in document": "Procurar no documento",
   "Print": "Imprimir",
   "Print document": "Imprimir documento",
-  "Import document": "Importar documento",
   "Templatize": "Modelo",
   "Create template": "Criar template",
   "Open random document": "Abrir documento aleatório",
@@ -206,6 +210,8 @@
   "Move document": "Mover documento",
   "Moving": "A mover",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.",
+  "More options": "More options",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Não foi possível carregar as Coleções, recarregue a aplicação",
   "Start view": "Vista inicial",
   "Install now": "Instalar agora",
@@ -216,7 +222,6 @@
   "Deleted Collection": "Coleção eliminada",
   "Untitled": "Sem título",
   "Unpin": "Tirar pino",
-  "{{ minutes }}m read": "{{ minutes }}m read",
   "Select a location to copy": "Select a location to copy",
   "Document copied": "Document copied",
   "Couldn’t copy the document, try again?": "Couldn’t copy the document, try again?",
@@ -345,6 +350,7 @@
   "Reaction picker": "Reaction picker",
   "Could not load reactions": "Could not load reactions",
   "Reaction": "Reaction",
+  "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Revision deleted",
   "Current version": "Versão atual",
   "{{userName}} edited": "{{userName}} editado",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
   "Show last modified": "Show last modified",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Convidar",
   "{{ userName }} was added to the collection": "{{ userName }} foi adicionado à coleção",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Não foi possível carregar documentos favoritos",
   "Shared with me": "Partilhado comigo",
   "Show more": "Mostrar mais",
+  "Link options": "Link options",
   "Could not load starred documents": "Não foi possível carregar documentos favoritos",
   "Starred": "Favoritos",
   "Up to date": "Em dia",
@@ -475,7 +484,7 @@
   "Keep as link": "Keep as link",
   "Mention": "Mention",
   "Embed": "Embed",
-  "More options": "More options",
+  "Rename": "Renomear",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -559,7 +568,6 @@
   "Video": "Vídeo",
   "None": "Nenhum",
   "Delete embed": "Delete embed",
-  "Rename": "Renomear",
   "Could not import file": "Não foi possível importar o ficheiro",
   "Unsubscribed from document": "Desinscrever do documento",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -577,10 +585,6 @@
   "Integrations": "Integrações",
   "API key": "API key",
   "Show path to document": "Mostrar caminho para documento",
-  "Sort in sidebar": "Ordenar na barra lateral",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
-  "Manual sort": "Ordenação manual",
   "Collection menu": "Menu de coleções",
   "Comment options": "Opções de comentário",
   "Enable viewer insights": "Habilitar estatísticas do utilizador",
