--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "Behörighet",
   "Collection permissions": "Behörighet samling",
   "Share this collection": "Dela denna samling",
+  "Import document": "Importera dokument",
+  "Sort in sidebar": "Sortera i sidofältet",
+  "A-Z sort": "A-Z sort",
+  "Z-A sort": "Z-A sort",
+  "Manual sort": "Manuell sortering",
   "Search in collection": "Sök i samling",
   "Star": "Stjärna",
   "Unstar": "Ta bort stjärnmärkning",
@@ -83,7 +88,6 @@
   "Search in document": "Sök i dokumentet",
   "Print": "Skriv ut",
   "Print document": "Skriv ut dokumentet",
-  "Import document": "Importera dokument",
   "Templatize": "Mallifiera",
   "Create template": "Skapa mall",
   "Open random document": "Öppna slumpvis dokument",
@@ -206,6 +210,8 @@
   "Move document": "&Flytta dokument",
   "Moving": "Flyttar",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.",
+  "More options": "Fler alternativ",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Samlingarna kunde inte laddas, ladda om appen",
   "Start view": "Startvy",
   "Install now": "Installera nu",
@@ -216,7 +222,6 @@
   "Deleted Collection": "Raderad samling",
   "Untitled": "Utan titel",
   "Unpin": "Lossa",
-  "{{ minutes }}m read": "{{ minutes }}m läst",
   "Select a location to copy": "Välj en plats att kopiera",
   "Document copied": "Dokument kopierat",
   "Couldn’t copy the document, try again?": "Kunde inte kopiera dokumentet, försök igen?",
@@ -345,6 +350,7 @@
   "Reaction picker": "Reaktionsväljare",
   "Could not load reactions": "Kunde inte ladda reaktioner",
   "Reaction": "Reaktion",
+  "{{ minutes }}m read": "{{ minutes }}m läst",
   "Revision deleted": "Revision raderad",
   "Current version": "Nuvarande version",
   "{{userName}} edited": "{{userName}} redigerade",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
   "Show last modified": "Visa senast ändrad",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Bjud in",
   "{{ userName }} was added to the collection": "{{ userName }} har lagts till i samlingen",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Kunde inte ladda delade dokument",
   "Shared with me": "Delat med mig",
   "Show more": "Visa mer",
+  "Link options": "Link options",
   "Could not load starred documents": "Kunde inte ladda stjärnmärkta dokument",
   "Starred": "Stjärnmärkt",
   "Up to date": "Uppdaterad",
@@ -475,7 +484,7 @@
   "Keep as link": "Behåll som länk",
   "Mention": "Nämn",
   "Embed": "Bädda in",
-  "More options": "Fler alternativ",
+  "Rename": "Döp om",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -559,7 +568,6 @@
   "Video": "Video",
   "None": "Ingen",
   "Delete embed": "Ta bort inbäddning",
-  "Rename": "Döp om",
   "Could not import file": "Kan inte importera fil",
   "Unsubscribed from document": "Prenumeration avslutad från dokument",
   "Unsubscribed from collection": "Avprenumerera från samling",
@@ -577,10 +585,6 @@
   "Integrations": "Integrationer",
   "API key": "API-nyckel",
   "Show path to document": "Visa sökväg till dokument",
-  "Sort in sidebar": "Sortera i sidofältet",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
-  "Manual sort": "Manuell sortering",
   "Collection menu": "Samlingsmeny",
   "Comment options": "Alternativ för kommentarer",
   "Enable viewer insights": "Aktivera tittarinsikter",
