fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "Yetkiler",
   "Collection permissions": "Koleksiyon yetkileri",
   "Share this collection": "Bu koleksiyonu paylaş",
+  "Import document": "Belgeyi içeri aktar",
+  "Sort in sidebar": "Kenar çubuğunda sırala",
+  "A-Z sort": "A-Z sort",
+  "Z-A sort": "Z-A sort",
+  "Manual sort": "Manuel sıralama",
   "Search in collection": "Koleksiyonda ara",
   "Star": "Yıldızla",
   "Unstar": "Yıldızı kaldır",
@@ -83,7 +88,6 @@
   "Search in document": "Belgelerde ara",
   "Print": "Yazdır",
   "Print document": "Belgeyi yazdır",
-  "Import document": "Belgeyi içeri aktar",
   "Templatize": "Şablona dönüştür",
   "Create template": "Şablon oluştur",
   "Open random document": "Rastgele belge aç",
@@ -206,6 +210,8 @@
   "Move document": "Belgeyi taşı",
   "Moving": "Taşınıyor",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "<em>{{ title }}</em> belgesini {{ newCollectionName }} koleksiyonuna taşımak, tüm çalışma alanı üyelerinin izinlerini <em>{{ prevPermission }}</em>'dan <em>{{ newPermission }}</em>'a değiştirecektir.",
+  "More options": "More options",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Koleksiyonlar yüklenemedi, lütfen uygulamayı yeniden yükleyin",
   "Start view": "Görünümü başlat",
   "Install now": "Şimdi yükle",
@@ -216,7 +222,6 @@
   "Deleted Collection": "Silinmiş Koleksiyon",
   "Untitled": "Başlıksız",
   "Unpin": "Sabitlemeyi kaldır",
-  "{{ minutes }}m read": "{{ minutes }}dakika okuma",
   "Select a location to copy": "Kopyalamak için bir konum seçin",
   "Document copied": "Belge kopyalandı",
   "Couldn’t copy the document, try again?": "Belge kopyalanamadı, tekrar deneyin?",
@@ -345,6 +350,7 @@
   "Reaction picker": "Tepki seçici",
   "Could not load reactions": "Tepkiler yüklenemedi",
   "Reaction": "Tepki",
+  "{{ minutes }}m read": "{{ minutes }}dakika okuma",
   "Revision deleted": "Revision deleted",
   "Current version": "Mevcut sürüm",
   "{{userName}} edited": "{{userName}} güncelledi",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
   "Show last modified": "Show last modified",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Davet et",
   "{{ userName }} was added to the collection": "{{ userName }} koleksiyona eklendi",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Could not load shared documents",
   "Shared with me": "Shared with me",
   "Show more": "Daha fazla göster",
+  "Link options": "Link options",
   "Could not load starred documents": "Could not load starred documents",
   "Starred": "Yıldızlı",
   "Up to date": "Güncel",
@@ -475,7 +484,7 @@
   "Keep as link": "Keep as link",
   "Mention": "Mention",
   "Embed": "Embed",
-  "More options": "More options",
+  "Rename": "Rename",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -559,7 +568,6 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
-  "Rename": "Rename",
   "Could not import file": "Dosya içe aktarılamadı",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -577,10 +585,6 @@
   "Integrations": "Entegrasyonlar",
   "API key": "API key",
   "Show path to document": "Belgeye giden yolu göster",
-  "Sort in sidebar": "Kenar çubuğunda sırala",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
-  "Manual sort": "Manuel sıralama",
   "Collection menu": "Koleksiyon menüsü",
   "Comment options": "Yorum seçenekleri",
   "Enable viewer insights": "İzleyici analizlerini etkinleştir",
