fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "Права доступу",
   "Collection permissions": "Дозволи на колекцію",
   "Share this collection": "Поділитися цією колекцією",
+  "Import document": "Імпортувати документ",
+  "Sort in sidebar": "Сортувати на бічній панелі",
+  "A-Z sort": "A-Z sort",
+  "Z-A sort": "Z-A sort",
+  "Manual sort": "Ручне сортування",
   "Search in collection": "Пошук в колекції",
   "Star": "Додати в обране",
   "Unstar": "Прибрати з обраного",
@@ -83,7 +88,6 @@
   "Search in document": "Пошук у документі",
   "Print": "Друкувати",
   "Print document": "Надрукувати документ",
-  "Import document": "Імпортувати документ",
   "Templatize": "Шаблонізувати",
   "Create template": "Створити шаблон",
   "Open random document": "Відкрити випадковий документ",
@@ -206,6 +210,8 @@
   "Move document": "Перемістити документ",
   "Moving": "Переміщення",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Переміщення документа <em>{{ title }}</em> до колекції {{ newCollectionName }} призведе до зміни дозволу для всіх учасників робочої області з <em>{{ prevPermission }}</em> на <em>{{ newPermission }}</em>.",
+  "More options": "More options",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Не вдалося завантажити колекції. Перезавантажте програму",
   "Start view": "Почати перегляд",
   "Install now": "Встановити зараз",
@@ -216,7 +222,6 @@
   "Deleted Collection": "Видалена колекція",
   "Untitled": "Без назви",
   "Unpin": "Відкріпити",
-  "{{ minutes }}m read": "{{ minutes }}m read",
   "Select a location to copy": "Select a location to copy",
   "Document copied": "Document copied",
   "Couldn’t copy the document, try again?": "Couldn’t copy the document, try again?",
@@ -345,6 +350,7 @@
   "Reaction picker": "Вибір реакцій",
   "Could not load reactions": "Не вдалося завантажити реакції",
   "Reaction": "Реакції",
+  "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Revision deleted",
   "Current version": "Поточна версія",
   "{{userName}} edited": "{{userName}} відредаговано",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Вимкніть цей параметр, щоб заборонити пошуковій системі індексувати сторінку",
   "Show last modified": "Show last modified",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Запросити",
   "{{ userName }} was added to the collection": "{{ userName }} додано до колекції",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Не вдалося завантажити спільні документи",
   "Shared with me": "Відкриті для мене",
   "Show more": "Показати більше",
+  "Link options": "Link options",
   "Could not load starred documents": "Не вдалося завантажити обрані документи",
   "Starred": "Обране",
   "Up to date": "Остання версія",
@@ -475,7 +484,7 @@
   "Keep as link": "Keep as link",
   "Mention": "Mention",
   "Embed": "Embed",
-  "More options": "More options",
+  "Rename": "Rename",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -559,7 +568,6 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
-  "Rename": "Rename",
   "Could not import file": "Не вдалося імпортувати файл",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -577,10 +585,6 @@
   "Integrations": "Інтеграції",
   "API key": "API key",
   "Show path to document": "Показати шлях до документа",
-  "Sort in sidebar": "Сортувати на бічній панелі",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
-  "Manual sort": "Ручне сортування",
   "Collection menu": "Меню колекцій",
   "Comment options": "Налаштування коментарів",
   "Enable viewer insights": "Увімкнути статистику перегляду",
