--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "权限",
   "Collection permissions": "文档集权限",
   "Share this collection": "分享此文档集",
+  "Import document": "导入文档",
+  "Sort in sidebar": "调整侧边栏的显示顺序",
+  "A-Z sort": "A-Z 排序",
+  "Z-A sort": "Z-A 排序",
+  "Manual sort": "手动排序",
   "Search in collection": "在文档集中搜索",
   "Star": "收藏",
   "Unstar": "取消收藏",
@@ -83,7 +88,6 @@
   "Search in document": "在文档中搜索",
   "Print": "打印",
   "Print document": "打印文档",
-  "Import document": "导入文档",
   "Templatize": "模板化",
   "Create template": "创建模板",
   "Open random document": "打开随机文档",
@@ -206,6 +210,8 @@
   "Move document": "移动文档",
   "Moving": "移动",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "将文档 <em>{{ title }}</em> 移动到 {{ newCollectionName }} 集合将使所有工作区成员的权限从 <em>{{ prevPermission }}</em> 更改为 <em>{{ newPermission }}</em>。",
+  "More options": "更多选项",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "无法加载文档集，请重新加载应用",
   "Start view": "开始浏览",
   "Install now": "立即安装",
@@ -216,7 +222,6 @@
   "Deleted Collection": "删除文档集",
   "Untitled": "无标题",
   "Unpin": "取消置顶",
-  "{{ minutes }}m read": "阅读了{{ minutes }}分钟",
   "Select a location to copy": "选择要复制的目标位置",
   "Document copied": "文档已复制",
   "Couldn’t copy the document, try again?": "无法复制文档，请重试",
@@ -345,6 +350,7 @@
   "Reaction picker": "回应选择器",
   "Could not load reactions": "无法加载回应",
   "Reaction": "回应",
+  "{{ minutes }}m read": "阅读了{{ minutes }}分钟",
   "Revision deleted": "修订已被删除",
   "Current version": "当前版本",
   "{{userName}} edited": "{{userName}} 已编辑",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "禁用此设置以阻止搜索引擎对该页建立索引",
   "Show last modified": "显示最后修改",
   "Display the last modified timestamp on the shared page": "在分享页面上显示最后修改的时间戳",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "此文档集中的所有文档将在网上共享，包括以后添加的任何新文档",
   "Invite": "邀请",
   "{{ userName }} was added to the collection": "{{ userName }} 已添加到文档集",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "无法加载共享文档",
   "Shared with me": "与我共享",
   "Show more": "显示更多",
+  "Link options": "Link options",
   "Could not load starred documents": "无法加载星标文件",
   "Starred": "已加星标",
   "Up to date": "已是最新版本",
@@ -475,7 +484,7 @@
   "Keep as link": "保留为链接",
   "Mention": "提及",
   "Embed": "嵌入",
-  "More options": "更多选项",
+  "Rename": "重命名",
   "Insert after": "在之后插入",
   "Insert before": "在之前插入",
   "Move up": "上移",
@@ -559,7 +568,6 @@
   "Video": "视频",
   "None": "空",
   "Delete embed": "删除嵌入",
-  "Rename": "重命名",
   "Could not import file": "无法导入文件",
   "Unsubscribed from document": "取消订阅文档",
   "Unsubscribed from collection": "取消订阅集合",
@@ -577,10 +585,6 @@
   "Integrations": "集成",
   "API key": "API 密钥",
   "Show path to document": "显示文档路径",
-  "Sort in sidebar": "调整侧边栏的显示顺序",
-  "A-Z sort": "A-Z 排序",
-  "Z-A sort": "Z-A 排序",
-  "Manual sort": "手动排序",
   "Collection menu": "文档集菜单",
   "Comment options": "评论选项",
   "Enable viewer insights": "启用浏览者统计",
