--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "權限",
   "Collection permissions": "文件集權限",
   "Share this collection": "分享這個文件集",
+  "Import document": "匯入文件",
+  "Sort in sidebar": "在側邊欄中排序",
+  "A-Z sort": "A-Z排列",
+  "Z-A sort": "Z-A排列",
+  "Manual sort": "手動排序",
   "Search in collection": "在文件集中搜尋",
   "Star": "加入收藏",
   "Unstar": "取消收藏",
@@ -83,7 +88,6 @@
   "Search in document": "搜尋文件",
   "Print": "列印",
   "Print document": "列印文件",
-  "Import document": "匯入文件",
   "Templatize": "作為範本",
   "Create template": "建立範本",
   "Open random document": "隨機打開文件",
@@ -206,6 +210,8 @@
   "Move document": "移動文件",
   "Moving": "正在移動",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "將文件<em>{{ title }}</em>移動至「{{ newCollectionName }}」文件集，會將所有工作區成員的權限從 「<em>{{ prevPermission }}</em>」 變更為 「 <em>{{ newPermission }}</em>」。",
+  "More options": "More options",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "文件集無法被載入，請重新整理 App",
   "Start view": "初始介面",
   "Install now": "立即安裝",
@@ -216,7 +222,6 @@
   "Deleted Collection": "刪除的文件集",
   "Untitled": "無標題",
   "Unpin": "取消釘選",
-  "{{ minutes }}m read": "「{{ minutes }}分鐘閱讀」",
   "Select a location to copy": "選擇要複製到的位置",
   "Document copied": "已複製文件",
   "Couldn’t copy the document, try again?": "無法複製文件，再嘗試一次？",
@@ -345,6 +350,7 @@
   "Reaction picker": "選擇迴響",
   "Could not load reactions": "無法載入迴響",
   "Reaction": "迴響",
+  "{{ minutes }}m read": "「{{ minutes }}分鐘閱讀」",
   "Revision deleted": "Revision deleted",
   "Current version": "目前版本",
   "{{userName}} edited": "{{userName}} 已編輯",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "停用此設定可阻止搜尋引擎為此頁面建立索引。",
   "Show last modified": "Show last modified",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "邀請",
   "{{ userName }} was added to the collection": "{{ userName }} 已經被新增到文件集",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "無法載入分享文件",
   "Shared with me": "與我共用",
   "Show more": "顯示更多",
+  "Link options": "Link options",
   "Could not load starred documents": "無法加載已標記文件",
   "Starred": "已收藏",
   "Up to date": "已是最新版本",
@@ -475,7 +484,7 @@
   "Keep as link": "保留為連結",
   "Mention": "Mention",
   "Embed": "嵌入",
-  "More options": "More options",
+  "Rename": "重新命名",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -559,7 +568,6 @@
   "Video": "影片",
   "None": "無",
   "Delete embed": "Delete embed",
-  "Rename": "重新命名",
   "Could not import file": "無法匯入檔案",
   "Unsubscribed from document": "取消訂閱文件",
   "Unsubscribed from collection": "取消訂閱文件",
@@ -577,10 +585,6 @@
   "Integrations": "整合",
   "API key": "API key",
   "Show path to document": "顯示文件路徑",
-  "Sort in sidebar": "在側邊欄中排序",
-  "A-Z sort": "A-Z排列",
-  "Z-A sort": "Z-A排列",
-  "Manual sort": "手動排序",
   "Collection menu": "文件集選單",
   "Comment options": "評論選項",
   "Enable viewer insights": "啟用瀏覽者洞察分析",
