--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "Phân quyền",
   "Collection permissions": "Quyền thu thập",
   "Share this collection": "Chia sẻ bộ sưu tập này",
+  "Import document": "Nhập tài liệu",
+  "Sort in sidebar": "Sắp xếp trong sidebar",
+  "A-Z sort": "Từ A-Z",
+  "Z-A sort": "Từ Z-A",
+  "Manual sort": "Sắp xếp thủ công",
   "Search in collection": "Tìm kiếm trong bộ sưu tập",
   "Star": "Gán sao",
   "Unstar": "Bỏ gắn sao",
@@ -83,7 +88,6 @@
   "Search in document": "Tìm kiếm tài liệu",
   "Print": "In",
   "Print document": "In tài liệu",
-  "Import document": "Nhập tài liệu",
   "Templatize": "Mẫu",
   "Create template": "Tạo mẫu",
   "Open random document": "Mở một tài liệu ngẫu nhiên",
@@ -206,6 +210,8 @@
   "Move document": "Chuyển tài liệu",
   "Moving": "Đang chuyển",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Việc di chuyển tài liệu <em>{{ title }}</em> sang bộ sưu tập {{ newCollectionName }} sẽ thay đổi quyền cho tất cả các thành viên trong không gian làm việc từ <em>{{ prevPermission }}</em> thành <em>{{ newPermission }}</em>.",
+  "More options": "More options",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Không thể tải bộ sưu tập, vui lòng tải lại ứng dụng",
   "Start view": "Bắt đầu xem",
   "Install now": "Cài đặt ngay",
@@ -216,7 +222,6 @@
   "Deleted Collection": "Xóa Bộ Sưu Tập",
   "Untitled": "Chưa đặt tên",
   "Unpin": "Bỏ ghim",
-  "{{ minutes }}m read": "{{ minutes }} phút đọc ",
   "Select a location to copy": "Chọn vị trí đích cần sao chép",
   "Document copied": "Đã sao chép tài liệu",
   "Couldn’t copy the document, try again?": "Không thể sao chép tài liệu, muốn thử lại?",
@@ -345,6 +350,7 @@
   "Reaction picker": "Reaction picker",
   "Could not load reactions": "Could not load reactions",
   "Reaction": "Phản ứng",
+  "{{ minutes }}m read": "{{ minutes }} phút đọc ",
   "Revision deleted": "Phiên bản đã được xóa",
   "Current version": "Phiên bản hiện tại",
   "{{userName}} edited": "{{userName}} đã chỉnh sửa",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
   "Show last modified": "Hiện lần sửa cuối",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Mời",
   "{{ userName }} was added to the collection": "{{ userName }} đã được thêm vào bộ sưu tập",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Không thể tải tài liệu được chia sẻ",
   "Shared with me": "Chia sẻ với tôi",
   "Show more": "Hiển thị thêm",
+  "Link options": "Link options",
   "Could not load starred documents": "Không thể tải tài liệu được đánh sao",
   "Starred": "Được gắn sao",
   "Up to date": "Đã cập nhật",
@@ -475,7 +484,7 @@
   "Keep as link": "Giữ dạng liên kết",
   "Mention": "Nhắc đến",
   "Embed": "Nhúng",
-  "More options": "More options",
+  "Rename": "Đổi tên",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -559,7 +568,6 @@
   "Video": "Video",
   "None": "Không",
   "Delete embed": "Xóa phần nhúng",
-  "Rename": "Đổi tên",
   "Could not import file": "Không thể nhập file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -577,10 +585,6 @@
   "Integrations": "Tích hợp",
   "API key": "Khóa API",
   "Show path to document": "Hiển thị đường dẫn đến tài liệu",
-  "Sort in sidebar": "Sắp xếp trong sidebar",
-  "A-Z sort": "Từ A-Z",
-  "Z-A sort": "Từ Z-A",
-  "Manual sort": "Sắp xếp thủ công",
   "Collection menu": "Menu bộ sưu tập",
   "Comment options": "Tùy chọn bình luận",
   "Enable viewer insights": "Bật thông tin chi tiết về người xem",
