fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "Permissões",
   "Collection permissions": "Permissões da coleção",
   "Share this collection": "Compartilhar esta coleção",
+  "Import document": "Importar documento",
+  "Sort in sidebar": "Ordenar na barra lateral",
+  "A-Z sort": "Ordenar A-Z",
+  "Z-A sort": "Ordenar Z-A",
+  "Manual sort": "Ordenação manual",
   "Search in collection": "Pesquisar na Coleção",
   "Star": "Adicionar aos favoritos",
   "Unstar": "Remover estrela",
@@ -83,7 +88,6 @@
   "Search in document": "Pesquisar no documento",
   "Print": "Imprimir",
   "Print document": "Imprimir documento",
-  "Import document": "Importar documento",
   "Templatize": "Modelar",
   "Create template": "Criar modelo",
   "Open random document": "Abrir documento aleatório",
@@ -206,6 +210,8 @@
   "Move document": "Mover documento",
   "Moving": "Movendo",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Mover o documento <em>{{ title }}</em> para a coleção {{ newCollectionName }} mudará a permissão para todos os membros do espaço de trabalho de <em>{{ prevPermission }}</em> para <em>{{ newPermission }}</em>.",
+  "More options": "Mais opções",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Não foi possível carregar as coleções, recarregue o aplicativo",
   "Start view": "Visualização de início",
   "Install now": "Instalar agora",
@@ -216,7 +222,6 @@
   "Deleted Collection": "Excluir Coleção",
   "Untitled": "Sem título",
   "Unpin": "Desafixar",
-  "{{ minutes }}m read": "Leitura de {{ minutes }}min",
   "Select a location to copy": "Selecione um local para copiar",
   "Document copied": "Documento copiado",
   "Couldn’t copy the document, try again?": "Não foi possível copiar o documento, tentar novamente?",
@@ -345,6 +350,7 @@
   "Reaction picker": "Seletor de reação",
   "Could not load reactions": "Não foi possível carregar as reações",
   "Reaction": "Reação",
+  "{{ minutes }}m read": "Leitura de {{ minutes }}min",
   "Revision deleted": "Revisão excluída",
   "Current version": "Versão atual",
   "{{userName}} edited": "{{userName}} editou",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Desativar essa configuração para desencorajar os motores de busca de indexar a página",
   "Show last modified": "Mostrar última modificação",
   "Display the last modified timestamp on the shared page": "Exibir horário da última modificação na página compartilhada",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Convite",
   "{{ userName }} was added to the collection": "{{ userName }} foi adicionado à coleção",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Não foi possível carregar documentos compartilhados",
   "Shared with me": "Compartilhados comigo",
   "Show more": "Exibir mais",
+  "Link options": "Link options",
   "Could not load starred documents": "Não foi possível carregar documentos favoritos",
   "Starred": "Favoritos",
   "Up to date": "Atualizado",
@@ -475,7 +484,7 @@
   "Keep as link": "Manter como link",
   "Mention": "Menção",
   "Embed": "Incorporar",
-  "More options": "Mais opções",
+  "Rename": "Renomear",
   "Insert after": "Inserir depois",
   "Insert before": "Inserir antes",
   "Move up": "Mover acima",
@@ -559,7 +568,6 @@
   "Video": "Vídeo",
   "None": "Nada",
   "Delete embed": "Deletar embed",
-  "Rename": "Renomear",
   "Could not import file": "Não foi possível importar o arquivo",
   "Unsubscribed from document": "Cancelada inscrição do documento",
   "Unsubscribed from collection": "Cancelada inscrição da coleção",
@@ -577,10 +585,6 @@
   "Integrations": "Integrações",
   "API key": "Chave de API",
   "Show path to document": "Mostrar caminho para o documento",
-  "Sort in sidebar": "Ordenar na barra lateral",
-  "A-Z sort": "Ordenar A-Z",
-  "Z-A sort": "Ordenar Z-A",
-  "Manual sort": "Ordenação manual",
   "Collection menu": "Menu da coleção",
   "Comment options": "Opções de comentário",
   "Enable viewer insights": "Habilitar Estatísticas de Visualização",
