fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -2,7 +2,7 @@
   "New API key": "Новий ключ API",
   "Delete": "Видалити",
   "Revoke": "Відкликати",
-  "Revoke API key": "Revoke API key",
+  "Revoke API key": "Відкликати ключ API",
   "Revoke token": "Відкликати токен",
   "Open collection": "Відкрити колекцію",
   "New collection": "Нова колекція",
@@ -14,8 +14,8 @@
   "Share this collection": "Поділитися цією колекцією",
   "Import document": "Імпортувати документ",
   "Sort in sidebar": "Сортувати на бічній панелі",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
+  "A-Z sort": "Сортування A-Я",
+  "Z-A sort": "Сортування Я-А",
   "Manual sort": "Ручне сортування",
   "Search in collection": "Пошук в колекції",
   "Star": "Додати в обране",
