--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Permission",
   "Change Language": "Changer de langue",
   "Dismiss": "Fermer",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Visionneuse",
   "View, navigate, or download images in the document": "Afficher, naviguer ou télécharger des images dans le document",
   "Close": "Fermer",
