fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Uprawnienia",
   "Change Language": "Zmień język",
   "Dismiss": "Odrzuć",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Zamknij",
