fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -319,6 +319,7 @@
   "Permission": "권한",
   "Change Language": "언어 변경",
   "Dismiss": "닫기",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "라이트박스",
   "View, navigate, or download images in the document": "문서에서 이미지 보기, 탐색 또는 다운로드",
   "Close": "닫기",
