fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Berechtigung",
   "Change Language": "Sprache ändern",
   "Dismiss": "Ablehnen",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "LightBox",
   "View, navigate, or download images in the document": "Bilder im Dokument anzeigen, navigieren oder herunterladen",
   "Close": "Schließen",
