fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Permiso",
   "Change Language": "Cambiar Idioma",
   "Dismiss": "Descartar",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Caja de luz\t",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Cerrar",
