--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Oprávnění",
   "Change Language": "Změnit jazyk",
   "Dismiss": "Zavřít",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Zavřít",
