--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Permission",
   "Change Language": "Skift sprog",
   "Dismiss": "Afvis",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Close",
