fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Permessi",
   "Change Language": "Cambia Lingua",
   "Dismiss": "Chiudi",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "Visualizza, naviga, o scarica immagini nel documento",
   "Close": "Chiudi",
