fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Rechten",
   "Change Language": "Wijzig taal",
   "Dismiss": "Negeer",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "Bekijk, navigeer of download afbeeldingen in het document",
   "Close": "Sluiten",
