--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Permissão",
   "Change Language": "Alterar língua",
   "Dismiss": "Dispensar",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Fechar",
