fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -319,6 +319,7 @@
   "Permission": "权限",
   "Change Language": "更改语言",
   "Dismiss": "忽略",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "大图模式",
   "View, navigate, or download images in the document": "浏览、查看或下载文档中的图片",
   "Close": "关闭",
