fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -319,6 +319,7 @@
   "Permission": "權限",
   "Change Language": "變更語言",
   "Dismiss": "知道了",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "關閉",
