fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Phân quyền",
   "Change Language": "Đổi Ngôn Ngữ",
   "Dismiss": "Bỏ qua",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Đóng",
