fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Tillatelse",
   "Change Language": "Bytt språk",
   "Dismiss": "Avvis",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lysboks",
   "View, navigate, or download images in the document": "Vis, naviger, eller last ned bilder i dokumentet",
   "Close": "Lukk",
