fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Zarchiwizowane kolekcje",
   "New doc": "Nowy dok",
   "Empty": "Pusty",
+  "No collections": "No collections",
   "Collapse": "Zwiń",
   "Expand": "Rozwiń",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokument nie jest obsługiwany – spróbuj formatu Markdown, zwykłego tekstu, HTML lub Word",
