fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "보관된 컬렉션",
   "New doc": "새 문서",
   "Empty": "비어 있음",
+  "No collections": "No collections",
   "Collapse": "감추기",
   "Expand": "펼치기",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "이 문서는 지원되지 않습니다 – Markdown, Plain Text, HTML이나 Word를 이용해주세요",
