fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Archivované sbírky",
   "New doc": "Nový dokument",
   "Empty": "Prázdné",
+  "No collections": "No collections",
   "Collapse": "Sbalit",
   "Expand": "Rozbalit",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokument není podporován – zkuste Markdown, Plain text, HTML nebo Word",
