fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Collezioni archiviate",
   "New doc": "Nuovo documento",
   "Empty": "Vuoto",
+  "No collections": "No collections",
   "Collapse": "Raggruppa",
   "Expand": "Espandi",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Documento non supportato – prova Markdown, testo semplice, HTML o Word",
