fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "アーカイブされたコレクション",
   "New doc": "ドキュメントを新規作成",
   "Empty": "空",
+  "No collections": "No collections",
   "Collapse": "折りたたむ",
   "Expand": "展開",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "ドキュメントはサポートされていません。\nMarkdown、プレーンテキスト、HTML、または Word をお試しください。",
