fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Zoek in collecties",
   "New doc": "Nieuw document",
   "Empty": "Leeg",
+  "No collections": "No collections",
   "Collapse": "Invouwen",
   "Expand": "Uitvouwen",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Document niet ondersteund - probeer Markdown, platte tekst, HTML of Word",
