fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Archived collections",
   "New doc": "Novo doc",
   "Empty": "Vazio",
+  "No collections": "No collections",
   "Collapse": "Fechar",
   "Expand": "Expandir",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Documento não suportado — tente Markdown, texto simples, HTML ou Word",
