fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Arkiverade samlingar",
   "New doc": "Nytt dokument",
   "Empty": "Tom",
+  "No collections": "No collections",
   "Collapse": "Minimera",
   "Expand": "Expandera",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokumentet stöds inte – prova Markdown, ren text, HTML eller Word",
