fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Archived collections",
   "New doc": "Yeni belge",
   "Empty": "Boş",
+  "No collections": "No collections",
   "Collapse": "Daralt",
   "Expand": "Genişlet",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Belge desteklenmiyor - Markdown, Düz Metin, HTML veya Word'ü deneyin",
