fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "已封存的文件集",
   "New doc": "新文件",
   "Empty": "空無一物",
+  "No collections": "No collections",
   "Collapse": "收合",
   "Expand": "展開",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "不支援的文件格式－請嘗試使用 Markdown、純文字、HTML 或 Word 格式",
