fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Bộ sưu tập đã lưu trữ",
   "New doc": "Tài liệu mới",
   "Empty": "Trống",
+  "No collections": "No collections",
   "Collapse": "Thu nhỏ",
   "Expand": "Mở rộng",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Tài liệu không được hỗ trợ - hãy thử Markdown, Plain text, HTML hoặc Word",
