fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Coleções arquivadas",
   "New doc": "Novo documento",
   "Empty": "Vazio",
+  "No collections": "No collections",
   "Collapse": "Recolher",
   "Expand": "Expandir",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Documento não compatível - experimente Markdown, Texto simples, HTML ou Word",
