fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Archived collections",
   "New doc": "Dokumen baru",
   "Empty": "Kosong",
+  "No collections": "No collections",
   "Collapse": "Persingkat",
   "Expand": "Perlengkap",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokumen tidak didukung – coba Markdown, teks biasa, HTML, atau Word",
