fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Archived collections",
   "New doc": "سند جدید",
   "Empty": "خالی",
+  "No collections": "No collections",
   "Collapse": "جمع کردن",
   "Expand": "باز کردن",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "نوع سند پشتیبانی نمی‌شود - از Markdown، متن ساده، HTML، یا Word استفاده کنید",
