fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Arkiverte samlinger",
   "New doc": "Nytt dokument",
   "Empty": "Tom",
+  "No collections": "No collections",
   "Collapse": "Kollaps",
   "Expand": "Utvid",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokument ikke støttet – prøv Markdown, ren tekst, HTML eller Word",
