fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -45,14 +45,14 @@
   "Copy ID": "Скопіювати ID",
   "Clear IndexedDB cache": "Очистити кеш IndexedDB",
   "IndexedDB cache cleared": "Кеш IndexedDB очищено",
-  "Clear local storage": "Clear local storage",
-  "Local storage cleared": "Local storage cleared",
+  "Clear local storage": "Очистити локальне сховище",
+  "Local storage cleared": "Локальне сховище очищено",
   "Toggle debug logging": "Ввімкнути/вимкнути ведення журналу відлагодження",
   "Debug logging enabled": "Журнал налагодження увімкнено",
   "Debug logging disabled": "Журнал налагодження вимкнено",
   "Development": "Розробка",
   "Open document": "Відкрити документ",
-  "New draft": "New draft",
+  "New draft": "Нова чернетка",
   "New from template": "Новий з шаблону",
   "New nested document": "Новий вкладений документ",
   "Publish": "Зробити публічним",
@@ -60,7 +60,7 @@
   "Publish document": "Опублікувати документ",
   "Unpublish": "Скасувати публікацію",
   "Unpublished {{ documentName }}": "Знято з публікації {{ documentName }}",
-  "Subscription inherited from collection": "Subscription inherited from collection",
+  "Subscription inherited from collection": "Підписка успадкована від колекції",
   "Share this document": "Поділитися цим документом",
   "HTML": "HTML",
   "PDF": "PDF",
@@ -70,8 +70,8 @@
   "Download document": "Завантажити документ",
   "Copy as Markdown": "Скопіювати як Markdown",
   "Markdown copied to clipboard": "Markdown скопійовано в буфер обміну",
-  "Copy as text": "Copy as text",
-  "Text copied to clipboard": "Text copied to clipboard",
+  "Copy as text": "Копіювати як текст",
+  "Text copied to clipboard": "Текст скопійовано до буфера обміну",
   "Copy public link": "Копіювати публічне посилання",
   "Link copied to clipboard": "Посилання скопійовано в буфер обміну",
   "Copy link": "Скопіювати лінк",
@@ -99,7 +99,7 @@
   "Are you sure you want to archive this document?": "Ви впевнені, що хочете архівувати цей документ?",
   "Document archived": "Документ архівовано",
   "Archiving this document will remove it from the collection and search results.": "Архівування цього документу прибере його з колекції та результатів пошуку.",
-  "{{ documentName }} restored": "{{ documentName }} restored",
+  "{{ documentName }} restored": "{{ documentName }} відновлено",
   "Choose a collection": "Оберіть колекцію",
   "Delete {{ documentName }}": "Видалити {{ documentName }}",
   "Permanently delete": "Видалити остаточно",
@@ -112,8 +112,8 @@
   "Leave document": "Вийти з документа",
   "You have left the shared document": "Ви залишили спільний документ",
   "Could not leave document": "Не вдалося покинути документ",
-  "Apply template": "Apply template",
-  "Disconnect analytics": "Disconnect analytics",
+  "Apply template": "Застосувати шаблон",
+  "Disconnect analytics": "Від'єднати аналітику",
   "Home": "Головна",
   "Drafts": "Чернетки",
   "Search": "Пошук",
@@ -135,9 +135,9 @@
   "Log out": "Вийти",
   "Mark notifications as read": "Позначити сповіщення як прочитані",
   "Archive all notifications": "Архівувати всі сповіщення",
-  "New App": "New App",
-  "New Application": "New Application",
-  "This version of the document was deleted": "This version of the document was deleted",
+  "New App": "Новий застосунок",
+  "New Application": "Новий застосунок",
+  "This version of the document was deleted": "Ця версія документу була видалена",
   "Link copied": "Посилання скопійовано",
   "Dark": "Темна",
   "Light": "Світла",
@@ -146,7 +146,7 @@
   "Change theme": "Змінити тему",
   "Change theme to": "Змінити тему на",
   "Share link copied": "Посилання скопійоване",
-  "Go to collection": "Go to collection",
+  "Go to collection": "Перейти до колекції",
   "Go to document": "Перейти до документа",
   "Revoke link": "Відкликати посилання",
   "Share link revoked": "Посилання для спільного доступу скасовано",
@@ -179,7 +179,7 @@
   "currently viewing": "зараз переглядають",
   "previously edited": "відредаговано раніше",
   "You": "Ви",
-  "Avatar of {{ name }}": "Avatar of {{ name }}",
+  "Avatar of {{ name }}": "Аватар {{ name }}",
   "Viewers": "Глядачі",
   "Collections are used to group documents and choose permissions": "Колекції використовуються для групування документів та вибору прав доступу",
   "Name": "Назва",
@@ -350,7 +350,7 @@
   "Could not load reactions": "Не вдалося завантажити реакції",
   "Reaction": "Реакції",
   "{{ minutes }}m read": "{{ minutes }}m read",
-  "Revision deleted": "Revision deleted",
+  "Revision deleted": "Версія видалена",
   "Current version": "Поточна версія",
   "{{userName}} edited": "{{userName}} відредаговано",
   "Results": "Результати",
